<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relative_layout">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extend_button"
            android:id="@+id/extend_button"
            android:layout_above="@+id/abandon_button" android:layout_centerHorizontal="true"
            android:layout_marginBottom="90dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abandon_button"
            android:id="@+id/abandon_button"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/timer_text" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:layout_marginTop="133dp" android:text="Clock String"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:id="@+id/start_button" android:layout_above="@+id/abandon_button"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>